# ProcDump-for-Linux

./: .gitignore  .travis.yml  BUILD.md  BUILDING_PACKAGE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBIAN_PACKAGE.control  INSTALL.md  Makefile  NOTICE.txt  README.md  azure-pipelines.yml  makePackages.sh  procdump.1  procdump.rb  procdump.rst  procdump_mac.1  sudo  travis.yml
.devcontainer/: Dockerfile_AzureLinux  Dockerfile_Rocky  Dockerfile_Ubuntu  devcontainer.json  install-mariner.dependencies.sh  install-rocky-dependencies.sh  install-ubuntu-dependencies.sh
.github/: issue_template.md
.github/workflows/: scorecard.yml
cmake/: FindBpf.cmake  FindLibelf.cmake
docs/: cloudnative_kubernetes.md  coreclrintegration.md  deploy.yaml  write_new_trigger.md
ebpf/: procdump_ebpf.c  procdump_ebpf.h  procdump_ebpf_common.h  vmlinux.h
include/: CoreDumpWriter.h  DotnetHelpers.h  Events.h  GenHelpers.h  Handle.h  Includes.h  Logging.h  Monitor.h  ProcDumpConfiguration.h  ProcDumpVersion.h.in  Procdump.h  Process.h  ProfilerCommon.h  ProfilerHelpers.h  Restrack.h  TriggerThreadProcs.h
profiler/inc/: CorProfiler.h  ProcDumpProfiler.h  pal.h  profilerstring.h
profiler/src/: ClassFactory.cpp  ProcDumpProfiler.cpp
src/: CoreDumpWriter.c  CoreDumpWriter.cpp  DotnetHelpers.c  DotnetHelpers.cpp  Events.c  Events.cpp  GenHelpers.c  GenHelpers.cpp  Handle.c  Handle.cpp  Logging.c  Logging.cpp  Monitor.c  Monitor.cpp  ProcDumpConfiguration.c  ProcDumpConfiguration.cpp  Procdump.c  Procdump.cpp  Process.c  Process.cpp  ProfilerHelpers.c  ProfilerHelpers.cpp  Restrack.cpp  TriggerThreadProcs.c
sym/: bcc_elf.c  bcc_proc.c  bcc_zip.c
templates/: build.yaml
tests/integration/: ProcDumpTestApplication.c  helpers.sh  run.sh  runProcDumpAndValidate.sh
tests/integration/TestWebApi/: Program.cs
tests/integration/TestWebApi/Properties/: launchSettings.json
tests/integration/scenarios/: dotnet_0ExceptionDump1Thrown_dump.sh  dotnet_0WildcardExceptionDump1Thrown_dump.sh  dotnet_1FilterExceptionMsgDump1Thrown_dump.sh  dotnet_1WildcardExceptionDump1Thrown_dump.sh  dotnet_1WildcardFilterExceptionMsgDump1Thrown_dump.sh  dotnet_1_gc_gen_1_dump.sh  dotnet_1_gc_threshold_1_dump.sh  dotnet_1exceptionDump1Thrown_dump.sh  dotnet_1exceptionDump2Thrown_dump.sh  dotnet_1exception_dump.sh  dotnet_2WildcardExceptionDump2Thrown_dump.sh  dotnet_2exceptionDump2Thrown_dump.sh  dotnet_2exception_dump.sh  dotnet_3_gc_thresholds_3_dumps.sh  dotnet_LOH_thresholds_3_dumps.sh  dotnet_MemMultipleDumps.sh  dotnet_POH_thresholds_3_dumps.sh  dotnet_exception_notdump.sh  dotnet_gen_2_thresholds_3_dumps.sh  dotnet_sigint_procdump.sh  dotnet_waitfortarget_1exceptionDump1Thrown_dump.sh  dotnet_wildcardexception_notdump.sh  high_cpu.sh  high_cpu_by_name.sh  high_cpu_custom_core_file_name.sh  high_cpu_nonexisting_output_directory.sh  high_cpu_notdump.sh  high_cpu_trigger_cpu_memory.sh  high_fd_by_name.sh  high_fd_notdump.sh  high_mem.sh  high_mem_notdump.sh  high_mem_restrack.sh  high_mem_trigger_cpu_memory.sh  high_tc_by_name.sh  high_tc_notdump.sh  low_cpu.sh  low_cpu_by_name.sh  low_cpu_notdump.sh  low_cpu_trigger_cpu_memory.sh  (+5 more)
tests/integration/scenarios_mac/: high_cpu.sh  high_fd_by_name.sh  high_mem.sh  high_tc_by_name.sh
tests/integration/signal/: makefile  signaltest  signaltest.c
